tests/negative/typecheck/array.orng
// array.orng:7:7: error: expected a value of type `Int`, got a value of type `Char`
//     x[1]
//      ^
// 
fn main() -> Int {
    let x: [3]Char = ['1', '2', '3']
    x[1]
}